--- a/Python/Laptops Pricing.ipynb
+++ b/Python/Laptops Pricing.ipynb
@@ -743,8 +743,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f10053c2-9565-484f-8e9f-3b826512f103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.replace('?',np.nan, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b70d60-6aba-4d47-b237-b61b20a794fc",
+   "metadata": {},
+   "source": [
+    "<h1> Task #4: </h1>\n",
+    "<h3>Print the data types of the dataframe columns</h3>\n",
+    "Make a note of the data types of the different columns of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa66833b-940b-4239-ad91-411449038f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manufacturer         object\n",
+      "Category              int64\n",
+      "Screen               object\n",
+      "GPU                   int64\n",
+      "OS                    int64\n",
+      "CPU_core              int64\n",
+      "Screen_Size_inch     object\n",
+      "CPU_frequency       float64\n",
+      "RAM_GB                int64\n",
+      "Storage_GB_SSD        int64\n",
+      "Weight_kg            object\n",
+      "Price                 int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2a89731-14ff-45bc-b0f0-ddf8744a8427",
+   "metadata": {},
+   "source": [
+    "<h1> Task #5: </h1>\n",
+    "<h3>Print the statistical description of the dataset, including that of 'object' data types.</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ecdfd6ea-9c9b-4e32-8709-2828a0d2b7bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Manufacturer</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Screen</th>\n",
+       "      <th>GPU</th>\n",
+       "      <th>OS</th>\n",
+       "      <th>CPU_core</th>\n",
+       "      <th>Screen_Size_inch</th>\n",
+       "      <th>CPU_frequency</th>\n",
+       "      <th>RAM_GB</th>\n",
+       "      <th>Storage_GB_SSD</th>\n",
+       "      <th>Weight_kg</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>238</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>238</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>234</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>238.000000</td>\n",
+       "      <td>233</td>\n",
+       "      <td>238.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>77</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Dell</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Full HD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>39.624</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>71</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>161</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>89</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.205882</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.151261</td>\n",
+       "      <td>1.058824</td>\n",
+       "      <td>5.630252</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.360084</td>\n",
+       "      <td>7.882353</td>\n",
+       "      <td>245.781513</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1462.344538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.776533</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.638282</td>\n",
+       "      <td>0.235790</td>\n",
+       "      <td>1.241787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.411393</td>\n",
+       "      <td>2.482603</td>\n",
+       "      <td>34.765316</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>574.607699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.200000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>527.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>256.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1066.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>256.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1333.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.700000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>256.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1777.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.900000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>256.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3810.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Manufacturer    Category   Screen         GPU          OS    CPU_core  \\\n",
+       "count           238  238.000000      238  238.000000  238.000000  238.000000   \n",
+       "unique           11         NaN        2         NaN         NaN         NaN   \n",
+       "top            Dell         NaN  Full HD         NaN         NaN         NaN   \n",
+       "freq             71         NaN      161         NaN         NaN         NaN   \n",
+       "mean            NaN    3.205882      NaN    2.151261    1.058824    5.630252   \n",
+       "std             NaN    0.776533      NaN    0.638282    0.235790    1.241787   \n",
+       "min             NaN    1.000000      NaN    1.000000    1.000000    3.000000   \n",
+       "25%             NaN    3.000000      NaN    2.000000    1.000000    5.000000   \n",
+       "50%             NaN    3.000000      NaN    2.000000    1.000000    5.000000   \n",
+       "75%             NaN    4.000000      NaN    3.000000    1.000000    7.000000   \n",
+       "max             NaN    5.000000      NaN    3.000000    2.000000    7.000000   \n",
+       "\n",
+       "       Screen_Size_inch  CPU_frequency      RAM_GB  Storage_GB_SSD Weight_kg  \\\n",
+       "count               234     238.000000  238.000000      238.000000       233   \n",
+       "unique                9            NaN         NaN             NaN        77   \n",
+       "top              39.624            NaN         NaN             NaN       2.2   \n",
+       "freq                 89            NaN         NaN             NaN        21   \n",
+       "mean                NaN       2.360084    7.882353      245.781513       NaN   \n",
+       "std                 NaN       0.411393    2.482603       34.765316       NaN   \n",
+       "min                 NaN       1.200000    4.000000      128.000000       NaN   \n",
+       "25%                 NaN       2.000000    8.000000      256.000000       NaN   \n",
+       "50%                 NaN       2.500000    8.000000      256.000000       NaN   \n",
+       "75%                 NaN       2.700000    8.000000      256.000000       NaN   \n",
+       "max                 NaN       2.900000   16.000000      256.000000       NaN   \n",
+       "\n",
+       "              Price  \n",
+       "count    238.000000  \n",
+       "unique          NaN  \n",
+       "top             NaN  \n",
+       "freq            NaN  \n",
+       "mean    1462.344538  \n",
+       "std      574.607699  \n",
+       "min      527.000000  \n",
+       "25%     1066.500000  \n",
+       "50%     1333.000000  \n",
+       "75%     1777.000000  \n",
+       "max     3810.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include = \"all\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc72d6b-8a69-4e6b-807d-8d80f2bfdb0a",
+   "metadata": {},
+   "source": [
+    "<h1> Task #6: </h1>\n",
+    "<h3>Print the summary information of the dataset.</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "68b50740-0fd4-4021-ba19-434da13950b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 238 entries, 0 to 237\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Manufacturer      238 non-null    object \n",
+      " 1   Category          238 non-null    int64  \n",
+      " 2   Screen            238 non-null    object \n",
+      " 3   GPU               238 non-null    int64  \n",
+      " 4   OS                238 non-null    int64  \n",
+      " 5   CPU_core          238 non-null    int64  \n",
+      " 6   Screen_Size_inch  234 non-null    object \n",
+      " 7   CPU_frequency     238 non-null    float64\n",
+      " 8   RAM_GB            238 non-null    int64  \n",
+      " 9   Storage_GB_SSD    238 non-null    int64  \n",
+      " 10  Weight_kg         233 non-null    object \n",
+      " 11  Price             238 non-null    int64  \n",
+      "dtypes: float64(1), int64(7), object(4)\n",
+      "memory usage: 22.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "025bfbe8-5d48-462c-aa93-530dde4f5041",
    "metadata": {},
    "outputs": [],
    "source": []
