--- a/Python/automobile.ipynb
+++ b/Python/automobile.ipynb
@@ -649,6 +649,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "33027779-791b-47dd-b6f9-0c2bd52f8658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(205, 26)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dd159122-ae01-4e0b-9dd6-efd5e18bc414",
    "metadata": {},
@@ -693,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3c23cf6d-3dff-4371-900d-b52e5c39beb6",
    "metadata": {},
    "outputs": [
@@ -725,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2656085c-d188-44a4-b943-d2ff96ce7a6e",
    "metadata": {},
    "outputs": [
@@ -741,7 +762,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "44b8bef5-f8d8-4352-8532-820b919fc722",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1128,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,12 +1147,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3d73b5b7-e0fc-4e69-8558-9a134c507826",
    "metadata": {},
    "outputs": [],
    "source": [
     "df1=df.replace('?',np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7facb658-9177-4fe5-8a94-cf0ea015d282",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(205, 26)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -1144,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6b0f64fe-fd8a-4563-a114-cf354cae8b22",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1812,7 @@
        "[20 rows x 26 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,6 +1833,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7dd89613-fa80-488a-bafd-45dd1172413d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(201, 26)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "22c1f418-9ec4-4cc6-b489-9b7733928080",
    "metadata": {},
@@ -1806,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "051775ff-a380-4dd0-84dd-b7edb2cf8d8f",
    "metadata": {},
    "outputs": [],
@@ -1842,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "edef9f3a-15e6-46dd-b2e2-6c8464774f50",
    "metadata": {},
    "outputs": [
@@ -1878,7 +1941,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "f9ce0fa2-d54d-436a-8458-d5379b0562b2",
    "metadata": {},
    "outputs": [
@@ -2085,7 +2148,7 @@
        "max    4066.000000   326.000000          23.000000   49.000000    54.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2111,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "a95b7ddb-d97f-4ca1-bb9f-00a5586340eb",
    "metadata": {},
    "outputs": [
@@ -2485,7 +2548,7 @@
        "[11 rows x 26 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2525,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "64597a01-e801-41a5-a674-c5eff4d951fe",
    "metadata": {},
    "outputs": [
@@ -2611,7 +2674,7 @@
        "max    208.100000          23.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2641,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "54e91eca-d396-47ee-8e1d-455e7d3e4dea",
    "metadata": {},
    "outputs": [
