--- a/Python/Laptops Pricing.ipynb
+++ b/Python/Laptops Pricing.ipynb
@@ -169,6 +169,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b2a2f6e8-3b9c-4a2c-bf88-5c9b3ec1ecec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(237, 12)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c71d9711-b9af-4c97-982d-b1eb2bc2b86c",
    "metadata": {},
@@ -180,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "95b03930-7685-4b1c-ba50-0662e059a157",
    "metadata": {},
    "outputs": [],
@@ -190,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "147fb267-0a38-4a3f-bbd3-95c7777d1d67",
    "metadata": {},
    "outputs": [
@@ -318,7 +339,7 @@
        "4    HP   4    Full HD   2   1   7  39.624  1.8   8  256  1.91   837"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a6b1a80e-9993-49e3-8351-a111caf109c6",
    "metadata": {},
    "outputs": [
@@ -457,7 +478,7 @@
        "237  Toshiba   3    Full HD   2   1   5   35.56  2.3   8  256  1.95  1499"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "de69e169-e285-4963-a493-83bfd69c77e1",
    "metadata": {},
    "outputs": [],
@@ -492,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4f79029d-1214-4a49-a6e4-ed03ea357f77",
    "metadata": {},
    "outputs": [],
@@ -502,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4db6bea4-3cf7-48da-9c50-37c9daa9cd12",
    "metadata": {},
    "outputs": [
@@ -722,7 +743,7 @@
        "9            1.8       8             256       2.2   1068  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f10053c2-9565-484f-8e9f-3b826512f103",
    "metadata": {},
    "outputs": [],
